Create basic backend structure and first authentication apis.
